# SerenaSK_SberHack_2026

./: .dockerignore  .env.example  .gitattributes  .gitignore  01_TECH_SPEC_SOURCE_OF_TRUTH.md  DECISIONS.md  Dockerfile  LICENSE  Makefile  README.md  STATUS.md  THIRD_PARTY_NOTICES.md  compose.local.yml  docker-compose.yml  package-lock.json  package.json  playwright.config.ts  provider_profiles.py  pyproject.toml  railway.toml  request_ledger.py  spec_constants.yaml
apps/: __init__.py
data/: dependency_license_overrides.json
design-system/: MASTER.md
docs/: ARCHITECTURE.md  ASSUMPTIONS.md  DATA_PROVENANCE.md  DEMO_SCRIPT.md  DEPENDENCIES.md  EVALUATION.md  JURY_GUIDE.md  LEGACY_REUSE.md  PROJECT_RESULTS_REPORT.md  RAILWAY.md  RUNBOOK.md  SECURITY.md  SUBMISSION_CHECKLIST.md  TERMINOLOGY.md  TRACEABILITY.md
gateway/: Caddyfile  Dockerfile
ouroboros/: Dockerfile
prompts/: communication_factory.ru.md
railway/: Caddyfile  __init__.py  auth.py  check_admission.py  start.py
scripts/: __init__.py  architecture_scan.py  backup.py  bootstrap_runtime.py  budget_control.py  build_editorial_references.py  campaign_authoring_quality.py  chaos_cases.py  clean_clone.py  compose_contract.py  controlled_retry_e2e.py  demo.py  doctor.py  e2e.py  evaluation.py  evidence.py  export_basket03_mvp_report.py  gate0_evidence.py  gate1.py  gate2_live.py  gate3.py  generation_metadata.py  image_security.py  init_project.py  license_scan.py  live_evaluation.py  live_probe.py  live_readiness.py  local_init.py  package_submission.py  preflight.py  release_identity.py  security_scan.py  (+8 more)
(+183 files in other folders)
